<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/main_bg"
	android:orientation="vertical">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/ll_sort_direct"
				android:layout_width="match_parent"
				android:layout_height="@dimen/main_bar_height"
				android:background="@drawable/btn_bar"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="@dimen/main_bar_height"
					android:padding="@dimen/setting_icon_padding"
					android:contentDescription="@string/app_name"
					android:scaleType="centerInside"
					android:src="@drawable/sort" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start|center_vertical"
					android:textSize="@dimen/main_direct_text"
					android:textColor="@color/main_text_color"
					android:text="@string/setting_sort_direct" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_sort_type"
				android:layout_width="match_parent"
				android:layout_height="@dimen/main_bar_height"
				android:layout_marginTop="@dimen/main_gap"
				android:background="@drawable/btn_bar"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="@dimen/main_bar_height"
					android:padding="@dimen/setting_icon_padding"
					android:contentDescription="@string/app_name"
					android:scaleType="centerInside"
					android:src="@drawable/sort" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start|center_vertical"
					android:textSize="@dimen/main_direct_text"
					android:textColor="@color/main_text_color"
					android:text="@string/setting_sort_type" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_list_style_direct"
				android:layout_width="match_parent"
				android:layout_height="@dimen/main_bar_height"
				android:layout_marginTop="@dimen/main_margin"
				android:background="@drawable/btn_bar"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="@dimen/main_bar_height"
					android:padding="@dimen/setting_icon_padding"
					android:contentDescription="@string/app_name"
					android:scaleType="centerInside"
					android:src="@drawable/grid" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start|center_vertical"
					android:textSize="@dimen/main_direct_text"
					android:textColor="@color/main_text_color"
					android:text="@string/setting_list_style_direct" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_list_style_type"
				android:layout_width="match_parent"
				android:layout_height="@dimen/main_bar_height"
				android:layout_marginTop="@dimen/main_gap"
				android:background="@drawable/btn_bar"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="@dimen/main_bar_height"
					android:padding="@dimen/setting_icon_padding"
					android:contentDescription="@string/app_name"
					android:scaleType="centerInside"
					android:src="@drawable/grid" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start|center_vertical"
					android:textSize="@dimen/main_direct_text"
					android:textColor="@color/main_text_color"
					android:text="@string/setting_list_style_type" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_list_style_big"
				android:layout_width="match_parent"
				android:layout_height="@dimen/main_bar_height"
				android:layout_marginTop="@dimen/main_gap"
				android:background="@drawable/btn_bar"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="@dimen/main_bar_height"
					android:padding="@dimen/setting_icon_padding"
					android:contentDescription="@string/app_name"
					android:scaleType="centerInside"
					android:src="@drawable/grid" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start|center_vertical"
					android:textSize="@dimen/main_direct_text"
					android:textColor="@color/main_text_color"
					android:text="@string/setting_list_style_big" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_list_style_recent"
				android:layout_width="match_parent"
				android:layout_height="@dimen/main_bar_height"
				android:layout_marginTop="@dimen/main_gap"
				android:background="@drawable/btn_bar"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="@dimen/main_bar_height"
					android:padding="@dimen/setting_icon_padding"
					android:contentDescription="@string/app_name"
					android:scaleType="centerInside"
					android:src="@drawable/grid" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start|center_vertical"
					android:textSize="@dimen/main_direct_text"
					android:textColor="@color/main_text_color"
					android:text="@string/setting_list_style_recent" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_hidden"
				android:layout_width="match_parent"
				android:layout_height="@dimen/main_bar_height"
				android:layout_marginTop="@dimen/main_margin"
				android:background="@drawable/btn_bar"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="@dimen/main_bar_height"
					android:padding="@dimen/setting_icon_padding"
					android:contentDescription="@string/app_name"
					android:scaleType="centerInside"
					android:src="@drawable/show" />

				<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="start|center_vertical"
					android:textSize="@dimen/main_direct_text"
					android:textColor="@color/main_text_color"
					android:text="@string/setting_hidden" />

				<ImageView
					android:id="@+id/iv_select"
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="@dimen/main_bar_height"
					android:padding="@dimen/setting_icon_padding"
					android:contentDescription="@string/app_name"
					android:scaleType="centerInside"
					android:src="@drawable/single_select_nor" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_num_limit_big"
				android:layout_width="match_parent"
				android:layout_height="@dimen/main_bar_height"
				android:layout_marginTop="@dimen/main_margin"
				android:background="@drawable/btn_bar"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="@dimen/main_bar_height"
					android:padding="@dimen/setting_icon_padding"
					android:contentDescription="@string/app_name"
					android:scaleType="centerInside"
					android:src="@drawable/number" />

				<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="start|center_vertical"
					android:textSize="@dimen/main_direct_text"
					android:textColor="@color/main_text_color"
					android:text="@string/setting_num_limit_big" />

				<TextView
					android:id="@+id/tv_num"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="start|center_vertical"
					android:textSize="@dimen/main_direct_text"
					android:textColor="@color/main_text_color" />

				<LinearLayout
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="match_parent"
					android:paddingStart="@dimen/setting_icon_padding"
					android:paddingEnd="@dimen/setting_icon_padding"
					android:orientation="vertical">

					<ImageView
						android:id="@+id/iv_up"
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_weight="1"
						android:contentDescription="@string/app_name"
						android:scaleType="centerInside"
						android:background="@drawable/btn_bar"
						android:src="@drawable/arrow_up" />

					<ImageView
						android:id="@+id/iv_dn"
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_weight="1"
						android:background="@drawable/btn_bar"
						android:contentDescription="@string/app_name"
						android:scaleType="centerInside"
						android:src="@drawable/arrow_down" />
				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_num_limit_recent"
				android:layout_width="match_parent"
				android:layout_height="@dimen/main_bar_height"
				android:layout_marginTop="@dimen/main_gap"
				android:background="@drawable/btn_bar"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="@dimen/main_bar_height"
					android:padding="@dimen/setting_icon_padding"
					android:contentDescription="@string/app_name"
					android:scaleType="centerInside"
					android:src="@drawable/number" />

				<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="start|center_vertical"
					android:textSize="@dimen/main_direct_text"
					android:textColor="@color/main_text_color"
					android:text="@string/setting_num_limit_recent" />

				<TextView
					android:id="@+id/tv_num"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="start|center_vertical"
					android:textSize="@dimen/main_direct_text"
					android:textColor="@color/main_text_color" />

				<LinearLayout
					android:layout_width="@dimen/main_bar_height"
					android:layout_height="match_parent"
					android:paddingStart="@dimen/setting_icon_padding"
					android:paddingEnd="@dimen/setting_icon_padding"
					android:orientation="vertical">

					<ImageView
						android:id="@+id/iv_up"
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_weight="1"
						android:background="@drawable/btn_bar"
						android:contentDescription="@string/app_name"
						android:scaleType="centerInside"
						android:src="@drawable/arrow_up" />

					<ImageView
						android:id="@+id/iv_dn"
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_weight="1"
						android:contentDescription="@string/app_name"
						android:scaleType="centerInside"
						android:background="@drawable/btn_bar"
						android:src="@drawable/arrow_down" />
				</LinearLayout>

			</LinearLayout>

		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:id="@+id/ll_menu"
		android:layout_width="match_parent"
		android:layout_height="@dimen/main_bar_height"
		android:layout_marginTop="@dimen/main_gap"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/iv_back"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:padding="@dimen/main_padding"
			android:gravity="center"
			android:contentDescription="@string/app_name"
			android:scaleType="centerInside"
			android:background="@drawable/btn_bar"
			android:src="@drawable/arrow_left" />

	</LinearLayout>

</LinearLayout>